# colorado_python

./: .gitmodules  MANIFEST.in  Makefile  pyproject.toml
.github/workflows/: publish.yml  update_json_data_dumps.yml
colorado/: COLORADO_COUNTY_BORDERS.geojson  __init__.py  _base.py  airports.py  counties.py  landmarks.py  license_plate_codes.py  mountains.py  municipalities.py  state.py  unincorporated_areas.py  zones.py
colorado/base/: location.py  populated_place.py  with_abbreviations.py  with_borders.py  with_coordinates.py  with_county.py  with_name.py  with_nearest_airport.py
colorado/internal/: __init__.py  geojson.py  validations.py
colorado_py/: __init__.py  _base.py  _info.py  airports.py  counties.py  landmarks.py  license_plate_codes.py  municipalities.py  unincorporated_areas.py
colorado_py/internal/: __init__.py  models.py
data/: airports.json  counties.json  dump_data.py  mountains.json  municipalities.json
